--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -21,13 +21,17 @@
         <div class="textTitle h5">Ticket</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/icons/payment-method.svg" class="gridImg" (click)="openPaymentType()">
+        <div class="textTitle h5">Payment Types</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/icons/bank.svg" class="gridImg" (click)="openBanking()">
+        <div class="textTitle h5">ທະນາຄານ</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/265667.svg" class="gridImg">
         <div class="textTitle h5">ຜູ້ໃຊ້</div>
       </div>
-    </div>
-
-    <div class="row">
-
     </div>
   </mat-card-content>
 </mat-card>
