--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -48,12 +48,12 @@
               <mat-list>
                 <mat-list-item>
                   <div class="row" style="width: 100%;">
-                    <div class="col col-md-3 text-left">ອາຫານ</div>
-                    <div class="col col-md-2 text-right">ຈຳນວນ</div>
-                    <div class="col col-md-2 text-right">ລາຄາ</div>
-                    <div class="col col-md-2 text-right">ລວມ</div>
-                    <div class="col col-md-2 text-center">Note</div>
-                    <div class="col col-md-1 text-right"></div>
+                    <div class="col col-md-3 text-left font-weight-bold">ອາຫານ</div>
+                    <div class="col col-md-2 text-right font-weight-bold">ຈຳນວນ</div>
+                    <div class="col col-md-2 text-right font-weight-bold">ລາຄາ</div>
+                    <div class="col col-md-2 text-right font-weight-bold">ລວມ</div>
+                    <div class="col col-md-2 text-center font-weight-bold">ຂໍ້ຄວາມ</div>
+                    <div class="col col-md-1 text-right font-weight-bold">ຈັດການ</div>
                   </div>
                 </mat-list-item>
                 <mat-divider></mat-divider>
@@ -65,7 +65,7 @@
                       <div class="col col-md-2 text-right">{{ cart.price | number }}</div>
                       <div class="col col-md-2 text-right"> {{ cart.total | number }}</div>
                       <div class="col col-md-2 text-left">{{ cart.note }}</div>
-                      <div class="col col-md-1 text-right">
+                      <div class="col col-md-1 text-center">
                         <img src="../../../assets/icons/baseline-note-24px.svg"
                           style="position: absolute; right:30px; cursor: pointer;" (click)="addnote(cart)">
                         <img src="../../../assets/icons/baseline-delete-24px.svg"
@@ -77,9 +77,10 @@
                 <mat-divider></mat-divider>
                 <mat-list-item>
                   <div class="row">
-                    <div class="col col-md-9 text-right h5" style="position: absolute; right:150px;">ຍອດລວມ</div>
+                    <div class="col col-md-9 text-right h5" style="position: absolute; right:150px;">ຍອດລວມ
+                    </div>
                     <div class="
-                      col col-md-3 text-right h5" style="position: absolute; right:10px;">{{ total | number }}</div>
+                      col col-md-3 text-right h5" style="position: absolute; right:18px;">{{ total | number }}</div>
                   </div>
                 </mat-list-item>
               </mat-list>
