--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -33,6 +33,13 @@
                     </option>
                   </select>
                 </div>
+                <div class="form-group col-md-12">
+                  <label for="payBy">Pay By</label>
+                  <select class="form-control" id="payBy">
+                    <option *ngFor="let paymentType of paymentTypes | async" value="{{ paymentType }}">
+                      {{ paymentType.paymentName }}</option>
+                  </select>
+                </div>
                 <div class="form-group col-md-12" style="bottom: 0;">
                   <button mat-flat-button color="warn" style="width: 100%; height: 50px;" (click)="paymentProcess()"
                     [disabled]="paymentBtnDisabled">ຈ່າຍ</button>
