--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -9,12 +9,11 @@
           <mat-divider></mat-divider>
           <mat-card-content>
             <div class="qrDiv text-center shadow">
-              <img src="../../../assets/images/letter-p-QR.png" style="width: 200px;">
+              <img [src]="srcQr" style="width: 200px;">
             </div>
           </mat-card-content>
         </mat-card>
       </div>
-
       <div class="col col-md-8">
         <form [formGroup]="orderForm">
           <mat-card>
@@ -28,7 +27,7 @@
               <div class="form-row">
                 <div class="form-group col-md-12" style="margin-top: 10px;">
                   <label for="ticket">Ticket</label>
-                  <select class="form-control" id="ticket" required formControlName="ticket"
+                  <select class="form-control" id="ticket" required formControlName="ticket" required
                     (change)="getTicketById($event.target.value)">
                     <option value="" disabled>------------------------</option>
                     <option *ngFor="let t of tickets | async" value="{{ t.ticket }}">{{ t.ticket }}
@@ -37,7 +36,8 @@
                 </div>
                 <div class="form-group col-md-12">
                   <label for="payBy">Pay By</label>
-                  <select class="form-control" id="payBy" (change)="checkPaymentCash($event.target.value)">
+                  <select class="form-control" id="payBy" (change)="checkPaymentCash($event.target.value)"
+                    formControlName="paymentType" required>
                     <option value="" disabled>------------------------</option>
                     <option *ngFor="let p of paymentTypes | async" value="{{ p.paymentCode }}">
                       {{ p.paymentCode }}</option>
@@ -57,7 +57,6 @@
                           required>
                       </div>
                     </div>
-
                   </mat-card-content>
                 </mat-card>
                 <div class="form-group col-md-12" style="margin-top: 10px;">
