--- a/src/app/dialogs/tickets/tickets.component.html
+++ b/src/app/dialogs/tickets/tickets.component.html
@@ -3,13 +3,17 @@
 </p>
 <form [formGroup]="ticketForm">
   <div class="form-row">
-    <div class="form-group col-md-10">
+    <div class="form-group col-md-8">
       <label for="subFood">Ticket</label>
       <input type="number" class="form-control" required formControlName="ticket">
     </div>
     <div class="form-group col-md-2">
       <label for="subFood">Ticket</label>
       <button mat-flat-button color="primary" style="width: 100%;" (click)="addNewTicket()">ເລືອກ</button>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="subFood">Ticket</label>
+      <button mat-flat-button color="primary" style="width: 100%;">Reset all</button>
     </div>
   </div>
 </form>
@@ -29,17 +33,19 @@
           <tr *ngFor="let ticket of tickets |async">
             <td class="text-left">{{ ticket.ticket }}</td>
             <td class="text-center" *ngIf="ticket.used == false ; else usedTicket">
-              <img src="../../../assets/icons/baseline-check_circle_outline-24px.svg" style="cursor: pointer;">
+              <img src="../../../assets/icons/baseline-check_circle_outline-24px.svg" style="cursor: pointer;"
+                (click)="update(ticket)">
             </td>
             <ng-template #usedTicket>
               <td class="text-center">
                 <img src="../../../assets/icons/256-256-ec140ce32ea8619e2b1dce4fad3b0d48-cross.png"
-                  style="width: 25px;cursor: pointer;">
+                  style="width: 25px;cursor: pointer;" (click)="update(ticket)">
               </td>
 
             </ng-template>
             <td class="text-center">
-              <img src="../../../assets/icons/baseline-delete-24px.svg" style="width: 25px;cursor: pointer;">
+              <img src="../../../assets/icons/baseline-delete-24px.svg" style="width: 25px;cursor: pointer;"
+                (click)="removeTicket(ticket.id)">
             </td>
           </tr>
         </tbody>
