--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,5 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
 * {
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, 'phetsarath-ot', 'Open Sans Condensed';
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, 'phetsarath-ot', 'product sans';
 }
