--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/265667.svg" class="gridImg">
-        <div class="textTitle h5">ຜູ້ໃຊ້</div>
+        <div class="textTitle h5">Menu</div>
       </div>
     </div>
   </mat-card-content>
