--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,3 +1,59 @@
-<p>
-  products works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Products Inventory</mat-card-title>
+    <mat-card-subtitle>Summary all Status</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="row">
+      <div class="col col-md-10">
+        <input type="text" class="form-control" style="width: 100%" placeholder="Search">
+      </div>
+      <div class="col col-md-2 text-right">
+        <button mat-raised-button color="primary" style="width: 100%;" (click)="openAddNewDialog()">Add new</button>
+      </div>
+    </div>
+
+    <table class="table table-bordered product_detail">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col" class="text-center" style="width: 30px;">ລະຫັດ</th>
+          <th scope="col" class="text-left">ລະຫັດບາໂຄດ</th>
+          <th scope="col" class="text-center">ລະຫັດສິນຄ້າ</th>
+          <th scope="col" class="text-center">ລະຫັດອາຫານ</th>
+          <th scope="col" class="text-center">ຊື່ສິນຄ້າ</th>
+          <th scope="col" class="text-center">ປະເພດ</th>
+          <th scope="col" class="text-center">ຕົ້ນທຶນ</th>
+          <th scope="col" class="text-center">ຍອດຕໍ່າສຸດ</th>
+          <th scope="col" class="text-center">ຍອດປະຈຸບັນ</th>
+          <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+          <th scope="col" class="text-center">ຜູ້ສະໜອງ</th>
+          <th scope="col" class="text-center">ເຂົ້າສາງວັນທີ</th>
+          <th scope="col" class="text-center">ຈັດການ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of products  | async" [ngClass]="{'bg-warning': product.currentQuantity == 0}">
+          <td class="text-left" (click)="updateProduct(product)" style="cursor: pointer">{{ product.id.trim() }}</td>
+          <td class="text-left">{{ product.barcode }}</td>
+          <td class="text-left">{{ product.productCode }}</td>
+          <td class="text-center">{{ product.foodId }}</td>
+          <td class="text-left">{{ product.productName }}</td>
+          <td class="text-left">{{ product.productTypeCode }}</td>
+          <td class="text-right">{{ product.cost |number }}</td>
+          <td class="text-center">{{ product.minimumQuantity |number }}</td>
+          <td class="text-center">{{ product.currentQuantity |number }}</td>
+          <td class="text-left">{{ product.unit }}</td>
+          <td class="text-left">{{ product.vendorId }}</td>
+          <td class="text-center">{{ product.createdAt.toDate() |date }}</td>
+          <td class="text-center"><button mat-raised-button color="warn"
+              (click)="deleteProduct(product)">Delete</button><span class="spaceDiv"></span><button mat-raised-button
+              color="primary" (click)="updateProduct(product)">Update</button></td>
+        </tr>
+      </tbody>
+      <tfoot class="thead-light">
+
+      </tfoot>
+    </table>
+  </mat-card-content>
+</mat-card>
