--- a/src/app/pages/purchase/purchase.component.css
+++ b/src/app/pages/purchase/purchase.component.css
@@ -9,3 +9,7 @@
   top: 12px;
   right: 15px;
 }
+.example-header-image {
+  background-image: url('../../../assets/icons/baseline-dashboard-24px.svg');
+  background-size: cover;
+}
