--- a/src/app/pages/purchase/purchase.component.html
+++ b/src/app/pages/purchase/purchase.component.html
@@ -1,7 +1,8 @@
 <mat-card>
   <mat-card-header>
-    <mat-icon class="icon-header">payment</mat-icon>
-    <h1 mat-dialog-title>Purchase Management</h1>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Purchase Management</mat-card-title>
+    <mat-card-subtitle>Summary Purchase billing and Stock update</mat-card-subtitle>
     <button mat-stroked-button color="primary" class="floatButton" (click)="addPurchase()">add new Purchase</button>
   </mat-card-header>
   <mat-card-content>
