--- a/src/app/pages/foods/foods.component.css
+++ b/src/app/pages/foods/foods.component.css
@@ -1,6 +1,6 @@
 .example-header-image {
 
-  background-image: url('../../../assets/icons/baseline-fastfood-24px.svg');
+  background-image: url('../../../assets/icons/fast-food.svg');
   background-size: cover;
 }
 .spaceDiv {
