--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -9,15 +9,15 @@
   <mat-card-content>
     <div class="row mainrow">
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/1162499.svg" class="gridImg" (click)="openAddFoodCat()">
+        <img src="../../../assets/icons/notepad.svg" class="gridImg" (click)="openAddFoodCat()">
         <div class="textTitle h5">ປະເພດອາຫານ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/delivery.svg" class="gridImg" (click)="openExtendedFoodType()">
+        <img src="../../../assets/icons/groceries.svg" class="gridImg" (click)="openExtendedFoodType()">
         <div class="textTitle h5">ອາຫານຍ່ອຍ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/1162455.svg" class="gridImg" (click)="openTicketMainternance()">
+        <img src="../../../assets/icons/rectangles.svg" class="gridImg" (click)="openTicketMainternance()">
         <div class="textTitle h5">Ticket</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
@@ -30,7 +30,19 @@
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
         <img src="../../../assets/images/icons/265667.svg" class="gridImg">
-        <div class="textTitle h5">Menu</div>
+        <div class="textTitle h5">Users</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/icons/store.svg" class="gridImg" (click)="openVendors()">
+        <div class="textTitle h5">Vendor</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/icons/weight.svg" class="gridImg">
+        <div class="textTitle h5">Unit</div>
+      </div>
+      <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+        <img src="../../../assets/icons/app.svg" class="gridImg">
+        <div class="textTitle h5">Menus</div>
       </div>
     </div>
   </mat-card-content>
