--- a/src/app/pages/orders/orders.component.css
+++ b/src/app/pages/orders/orders.component.css
@@ -1,4 +1,4 @@
 .example-header-image {
-  background-image: url('../../../assets/icons/baseline-restaurant-24px.svg');
+  background-image: url('../../../assets/icons/order.svg');
   background-size: cover;
 }
