--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -11,9 +11,10 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
-              <h6 class="m-b-20">Orders Received</h6>
-              <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>486</span></h2>
-              <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+              <h6 class="m-b-20">ຍອດຂາຍທັງໝົດ</h6>
+              <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>{{ transactionAmount |number }}</span>
+              </h2>
+              <p class="m-b-0">ຍອດການຂາຍ<span class="f-right">{{ transactionCount |number }} ລາຍການ</span></p>
             </div>
           </div>
         </div>
@@ -22,8 +23,9 @@
           <div class="card bg-c-green order-card">
             <div class="card-block">
               <h6 class="m-b-20">Orders Received</h6>
-              <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>486</span></h2>
-              <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+              <h2 class="text-right"><i
+                  class="fa fa-rocket f-left"></i><span>{{ transactionAmountDiary |number }}</span></h2>
+              <p class="m-b-0">Completed Orders<span class="f-right">{{ transactionCountDairy |number }}</span></p>
             </div>
           </div>
         </div>
