--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,10 +22,11 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-green order-card">
             <div class="card-block">
-              <h6 class="m-b-20">Orders Received</h6>
+              <h6 class="m-b-20">ຍອດຂາຍ ຂອງວັນ </h6>
               <h2 class="text-right"><i
                   class="fa fa-rocket f-left"></i><span>{{ transactionAmountDiary |number }}</span></h2>
-              <p class="m-b-0">Completed Orders<span class="f-right">{{ transactionCountDairy |number }}</span></p>
+              <p class="m-b-0">Completed Orders<span class="f-right">{{ transactionCountDairy |number }} ລາຍການ</span>
+              </p>
             </div>
           </div>
         </div>
