--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -34,9 +34,9 @@
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-yellow order-card">
             <div class="card-block">
-              <h6 class="m-b-20">Orders Received</h6>
-              <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>486</span></h2>
-              <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+              <h6 class="m-b-20">ຍອດຂາຍ ຕາມຄົວ</h6>
+              <h2 class="text-right" *ngFor="let rp of reportByKitchen"><i
+                  class="fa fa-refresh f-left">{{ rp.kitchen  }} - {{ rp.kitchenAmount }}</i><span></span></h2>
             </div>
           </div>
         </div>
