--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
               <h6 class="m-b-20">ຍອດຂາຍ ຂອງວັນ </h6>
               <h2 class="text-right"><i
                   class="fa fa-rocket f-left"></i><span>{{ transactionAmountDiary |number }}</span></h2>
-              <p class="m-b-0">Completed Orders<span class="f-right">{{ transactionCountDairy |number }} ລາຍການ</span>
+              <p class="m-b-0">ຍອດການຂາຍ<span class="f-right">{{ transactionCountDairy |number }} ລາຍການ</span>
               </p>
             </div>
           </div>
@@ -35,12 +35,16 @@
           <div class="card bg-c-yellow order-card">
             <div class="card-block">
               <h6 class="m-b-20">ຍອດຂາຍ ຕາມຄົວ</h6>
-              <h2 class="text-right" *ngFor="let rp of reportByKitchen"><i
-                  class="fa fa-refresh f-left">{{ rp.kitchen  }} - {{ rp.kitchenAmount }}</i><span></span></h2>
+              <div *ngFor="let rp of reportByKitchen">
+                <h2 class="text-right">
+                  <i class="material-icons f-left">flare
+                    {{ rp.kitchen }}</i><span>{{ rp.kitchenAmount | number}}</span></h2>
+                <p class="m-b-0">ຍອດການຂາຍ<span class="f-right"> {{ rp.kitchenCount | number }} ລາຍການ</span>
+              </div>
+
             </div>
           </div>
         </div>
-
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-pink order-card">
             <div class="card-block">
