--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 <div class="topbar-Container">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span *ngFor="let RestaurantInfo of RestaurantInfos | async">{{ RestaurantInfo.restaurantName }} {{
-      RestaurantInfo.slogan }} </span>
+      <span *ngFor="let RestaurantInfo of RestaurantInfos | async">{{ RestaurantInfo.restaurantName }}
+        {{ RestaurantInfo.slogan }} </span>
       <span class="example-spacer"></span>
-      <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menus |async"
-        routerLink="{{ menu.menuLink }}">{{
+      <div fxShow="true" fxHide.lt-md="true">
+        <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menus |async"
+          routerLink="{{ menu.menuLink }}">{{
       menu.menuName }}</button>
+      </div>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
