--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -9,6 +9,7 @@
       <table class="table table-bordered">
         <thead class="thead-light">
           <tr>
+            <th scope="col" class="text-center">Q</th>
             <th scope="col" class="text-center">orderId</th>
             <th scope="col" class="text-center">transaction_date</th>
             <th scope="col" class="text-center">refno</th>
@@ -24,28 +25,34 @@
             <th scope="col" class="text-center">Settled</th>
             <th scope="col" class="text-center">Invoice no</th>
             <th scope="col" class="text-center">Kitchen</th>
+            <th scope="col" class="text-center">Recover</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let transaction of transactions | async">
-            <td class="text-left">{{ transaction.orderId }}</td>
-            <td class="text-left">{{ transaction.transaction_date.toDate() | date:'dd-MMM-yyyy HH:mm:ss' }}</td>
-            <td class="text-center">{{ transaction.refno }}</td>
-            <td class="text-left">{{ transaction.foodName }}</td>
-            <td class="text-right">{{ transaction.cost | number }}</td>
-            <td class="text-right">{{ transaction.price | number }}</td>
-            <td class="text-right">{{ transaction.quantity | number }}</td>
-            <td class="text-right">{{ transaction.total_price | number }}</td>
-            <td class="text-right">{{ transaction.total_cost | number }}</td>
-            <td class="text-right">{{ transaction.profit | number }}</td>
-            <td class="text-right">{{ transaction.bill_amount | number }}</td>
-            <td class="text-center">{{ transaction.paymentBy }}</td>
-            <td class="text-center" *ngIf="transaction.settled == true">
+            <td class="text-left align-middle">{{ transaction.ticket }}</td>
+            <td class="text-left align-middle">{{ transaction.orderId }}</td>
+            <td class="text-left align-middle">{{ transaction.transaction_date.toDate() | date:'dd-MMM-yyyy HH:mm:ss' }}
+            </td>
+            <td class="text-center align-middle">{{ transaction.refno }}</td>
+            <td class="text-left align-middle">{{ transaction.foodName }}</td>
+            <td class="text-right align-middle">{{ transaction.cost | number }}</td>
+            <td class="text-right align-middle">{{ transaction.price | number }}</td>
+            <td class="text-right align-middle">{{ transaction.quantity | number }}</td>
+            <td class="text-right align-middle">{{ transaction.total_price | number }}</td>
+            <td class="text-right align-middle">{{ transaction.total_cost | number }}</td>
+            <td class="text-right align-middle">{{ transaction.profit | number }}</td>
+            <td class="text-right align-middle">{{ transaction.bill_amount | number }}</td>
+            <td class="text-center align-middle">{{ transaction.paymentBy }}</td>
+            <td class="text-center align-middle" *ngIf="transaction.settled == true">
               <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png" disable
                 style="max-width: 20px;">
             </td>
-            <td class="text-center">{{ transaction.invoiceno }}</td>
-            <td class="text-center">{{ transaction.kitchen }}</td>
+            <td class="text-center align-middle">{{ transaction.invoiceno }}</td>
+            <td class="text-center align-middle">{{ transaction.kitchen }}</td>
+            <td class="text-center align-middle">
+              <button mat-raised-button color="warn">Recover</button>
+            </td>
           </tr>
         </tbody>
       </table>
