--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 * {
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, 'phetsarath-ot';
+   font-family: 'Montserrat',  sans-serif , 'phetsarath-ot';
 }
