--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -29,7 +29,7 @@
         <div class="textTitle h5">ທະນາຄານ</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/images/icons/265667.svg" class="gridImg">
+        <img src="../../../assets/images/icons/265667.svg" class="gridImg" (click)="openAddUser()">
         <div class="textTitle h5">Users</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
