--- a/src/app/dialogs/addusers/addusers.component.html
+++ b/src/app/dialogs/addusers/addusers.component.html
@@ -9,15 +9,23 @@
       <input type="text" id="userId" readonly class="form-control" formControlName="userId" required>
     </div>
     <div class="col col-md-6">
+      <label for="employeeCode">ລະຫັດພະນັກງານ</label>
+      <input type="text" id="employeeCode" readonly class="form-control" formControlName="employeeCode" required>
+    </div>
+    <div class="col col-md-6">
+      <label for="WebloginUsr">Weblogin user</label>
+      <select class="form-control" required (change)="webUserSelectChange($event.target.value)">
+        <option value="" disabled>-------------</option>
+        <option value="{{ webUser.docid }}" *ngFor="let webUser of webUsers | async">{{ webUser.name }}</option>
+      </select>
+    </div>
+    <div class="col col-md-6">
       <label for="userName">ຊື່ຜູ້ໃຊ້</label>
       <input type="text" id="userName" class="form-control" formControlName="userName" required
         (keyup)="checkUserNameAvailable($event.target.value)">
     </div>
 
-    <div class="col col-md-6">
-      <label for="employeeCode">ລະຫັດພະນັກງານ</label>
-      <input type="text" id="employeeCode" readonly class="form-control" formControlName="employeeCode" required>
-    </div>
+
     <div class="col col-md-6">
       <label for="gender">ເພດ</label>
       <select class="form-control" formControlName="gender" required>
